--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="#0">
-                      <div class="slider--item-image">
-                        <img src="assets/img/popcorn.png" alt="popcorn">
-                      </div>
-                      <p class="slider--item-title">Machine Learning:<br> Movie Revenue Prediction system</p>
-                      <p class="slider--item-description">Built a Movie revenue prediction system using NumPy, Pandas, MatPlotlib and Linear regression.</p>
-                    </a>
-                  </li>
-                  <li class="slider--item slider--item-center">
                     <a href="https://play.google.com/store/apps/details?id=com.Racarys.WorldFlap">
                       <div class="slider--item-image">
                         <img src="assets/img/coronavirus.png" alt="coronavirus">
                       </div>
                       <p class="slider--item-title">Game Development:<br> CovidFlap: The Ultimate 2020 Saga</p>
                       <p class="slider--item-description">CovidFlap was built for social awareness on the coronavirus pandemic which was built using unity game engine and c#</p>
+                    </a>                
+                  </li>
+                  <li class="slider--item slider--item-center">
+                    <a href="#0">
+                      <div class="slider--item-image">
+                        <img src="assets/img/popcorn.png" alt="popcorn">
+                      </div>
+                      <p class="slider--item-title">Machine Learning:<br> Movie Revenue Prediction system</p>
+                      <p class="slider--item-description">Built a Movie revenue prediction system using NumPy, Pandas, MatPlotlib and Linear regression.</p>
                     </a>
                   </li>
 
@@ -182,22 +182,22 @@
             <h1><center>Internship</center></h1>
             <div class="work--lockup">
               <ul class="slider3">
-                <!-- <li class="slider3--item slider3--item-left">
-                  <a href="#0">
-                    <div class="slider3--item-image">
-                      <img src="assets/img/popcorn.png" alt="popcorn">
-                    </div>
-                    <p class="slider3--item-title">Technology:<br> Lorem ipsum dolor sit amet</p>
-                    <p class="slider3--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta reiciendis deserunt doloribus consequatur, laudantium odio dolorum laboriosam.</p>
-                  </a>
-                </li> -->
-                <li class="slider3--item slider3--item-center">
+                <li class="slider3--item slider3--item-left">
                   <a href="https://play.google.com/store/apps/details?id=com.racarys.narkhaexpzone">
                     <div class="slider3--item-image">
                       <img src="assets/img/narkha.png" alt="coronavirus">
                     </div>
                     <p class="slider3--item-title">NARKHA LLP<br>Augmented Reality Developer</p>
                     <p class="slider3--item-description">Developed a commercial AR application that provides AR experience on scanning apparel and built using Unity, C# and Vuforia.</p>
+                  </a>
+                </li>
+                <li class="slider3--item slider3--item-center">
+                  <a href="#0">
+                    <div class="slider3--item-image">
+                      <img src="assets/img/park.png" alt="park+logo">
+                    </div>
+                    <p class="slider3--item-title">Park +<br> Application Development Intern</p>
+                    <p class="slider3--item-description"> Developed a complete arcade game using c#, Unity and launched on the park+ app having 5,00,000+ downloads.</p>
                   </a>
                 </li>
                 <li class="slider3--item slider3--item-right">
@@ -238,7 +238,7 @@
             <div class="iframe-container">
               <iframe id="ytFrame" src="https://www.youtube.com/embed/9jVjWWH1UgM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <a class="btn5" href="https://drive.google.com/file/d/1oIVohhu3AXqUKs61taQ6GM7jwgEYq2tI/view?usp=sharing">DOWNLOAD RESUME</a>
+            <a class="btn5" href="https://drive.google.com/file/d/1pfjky3Virmk0D11qxzb6O8d8Ub0GW1cI/view?usp=sharing">DOWNLOAD RESUME</a>
             </div>
           </li>
 
