--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           <ul class="side-nav">
             <li class="is-active"><span>Home</span></li>
             <li><span>Projects</span></li>
-            <!-- <li><span>Work Ex</span></li> -->
-            <li><span>Internship</span></li>
+            <li><span>Work Experience</span></li>
+            <!-- <li><span>Internship</span></li> -->
             <li><span>Resume</span></li>
             <li><span>Contact</span></li>
           </ul>
@@ -179,16 +179,16 @@
 
           <li class="l-section section">
             <div class="work">
-            <h1><center>Internship</center></h1>
+            <h1><center>Work Experience</center></h1>
             <div class="work--lockup">
               <ul class="slider3">
                 <li class="slider3--item slider3--item-left">
-                  <a href="https://play.google.com/store/apps/details?id=com.racarys.narkhaexpzone">
+                  <a href="#0">
                     <div class="slider3--item-image">
                       <img src="assets/img/narkha.png" alt="coronavirus">
                     </div>
-                    <p class="slider3--item-title">NARKHA LLP<br>Augmented Reality Developer</p>
-                    <p class="slider3--item-description">Developed a commercial AR application that provides AR experience on scanning apparel and built using Unity, C# and Vuforia.</p>
+                    <p class="slider3--item-title">NARKHA LLP<br>Data Scientist Intern</p>
+                    <p class="slider3--item-description">Built an ML model that scans images and classifies them into 10 fashion categories using Keras and a Convolutional Artificial Neural Network.</p>
                   </a>
                 </li>
                 <li class="slider3--item slider3--item-center">
@@ -273,7 +273,7 @@
     <li class="is-active">Home</li>
     <li>Projects</li>
     <!-- <li>Work Ex</li> -->
-    <li>Internship</li>
+    <li>Work Experience</li>
     <li>Resume</li>
     <li>Contact</li>
   </ul>
