--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><span>Projects</span></li>
             <li><span>Work Experience</span></li>
             <!-- <li><span>Internship</span></li> -->
-            <li><span>Resume</span></li>
+<!--             <li><span>Resume</span></li> -->
             <li><span>Contact</span></li>
           </ul>
         </nav>
@@ -41,7 +41,7 @@
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>Hey, I'm Jai.<br> A Product Manager.</h1>
+                <h1>Hey, I'm Jai.<br> Growth & PM.</h1>
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
                     <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
@@ -65,7 +65,7 @@
                         <img src="assets/img/coronavirus.png" alt="coronavirus">
                       </div>
                       <p class="slider--item-title">Unity Game Development<br> WorldFlap: The Ultimate 2020 Saga</p>
-                      <p class="slider--item-description">CovidFlap was built for social awareness on the coronavirus pandemic which was built using unity game engine and c#</p>
+                      <p class="slider--item-description">CovidFlap was built for social awareness on the coronavirus pandemic which was built using unity game engine and c#.</p>
                     </a>                
                   </li>
                   
@@ -240,7 +240,7 @@
                       <img src="assets/img/stolo.png" alt="stolo logo">
                     </div>
                     <p class="slider3--item-title">Stolo Technologies Pvt. Ltd.<br>Associate Product Manager</p>
-                    <p class="slider3--item-description"> Grew product from 0 to 20,000+ users with 0 CAC</p>
+                    <p class="slider3--item-description"> Grew product from 0 to 20,000+ users with 0 CAC.</p>
                   </a>
                 </li>
                 
@@ -330,7 +330,7 @@
     <li>Projects</li>
     <!-- <li>Work Ex</li> -->
     <li>Work Experience</li>
-    <li>Resume</li>
+<!--     <li>Resume</li> -->
     <li>Contact</li>
   </ul>
 </div>
